@@ -2,11 +2,10 @@ package com.xyzwps.libs.yaff.flow;
 
 import com.xyzwps.libs.yaff.commons.NodeIds;
 import com.xyzwps.libs.yaff.node.NodeRegister;
-import com.xyzwps.libs.yaff.node.Parameter;
+import com.xyzwps.libs.yaff.node.ParameterType;
 
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 
 public class FlowExecutor {
@@ -20,7 +19,10 @@ public class FlowExecutor {
     public void execute(Flow flow, FlowContext context) {
 
         var currentId = NodeIds.START;
+        var step = 0;
         while (!NodeIds.END.equals(currentId)) {
+            step++;
+            // TODO: 避免无限循环
             var flowNode = flow.getNodeInstance(currentId);
             if (flowNode == null) {
                 throw new RuntimeException("Node not found: id=" + currentId);
@@ -31,7 +33,8 @@ public class FlowExecutor {
                 throw new RuntimeException("Node not registered: name=" + flowNode.getName());
             }
 
-            Map<String, Parameter.Type> inputTypes = new HashMap<>();
+            System.out.println("=> Step(" + step + ") " + node.getName());
+            Map<String, ParameterType> inputTypes = new HashMap<>();
             for (var input : node.getInputs()) {
                 inputTypes.put(input.name(), input.type());
             }
@@ -46,20 +49,38 @@ public class FlowExecutor {
                 inputs.put(inputName, assignExpression.calculate(context, inputType));
             }
             node.execute(inputs, new PrefixedContext(flowNode.getId(), context));
-            currentId = flowNode.getNext().get(0); // TODO: decide next node
+
+            var next = flowNode.getNext();
+            if (next == null || next.isEmpty()) {
+                break;
+            } else if (next.size() > 1) {
+                // TODO: decide next node
+            } else {
+                currentId = next.getFirst();
+            }
         }
     }
-
 
     private record PrefixedContext(String prefix, FlowContext context) implements FlowContext {
 
         @Override
         public void set(String name, Object value) {
-            context.set(prefix + "." + name, value);
+            if (name == null) {
+                throw new IllegalArgumentException("Context variable name cannot be null");
+            }
+
+            if (SimpleFlowContext.NAME_PATTERN.matcher(name).matches()) {
+                context.set(prefix + "." + name, value);
+            } else {
+                throw new IllegalArgumentException("Invalid context variable name: " + name);
+            }
         }
 
         @Override
         public Object get(String name) {
+            if (name == null) {
+                throw new IllegalArgumentException("Context variable name cannot be null");
+            }
             return context.get(name);
         }
 
